# leetcode

./: pyproject.toml
.vim/: local.lua
0001_two_sum/: solve.py
0002_add_two_numbers/: solve.py
0003_longest_substring_without_repeating_characters/: solve.py
0005_longest_palindrom_substring/: solve.py
0006_zigzag_conversion/: solve.py
0007_reverse_integer/: solve.py
0008_string_to_integer/: solve.py
0009_palindrome_number/: solve.py
0010_regular_expression_matching/: solve.py
0011_container_with_most_water/: solve.py
0012_integer_to_roman/: solve.py
0013_roman_to_integer/: solve.py
0014_longest_common_prefix/: solve.py
0015_3sum/: solve.py
0016_3sum_closest/: solve.py
0017_letter_combinations_of_a_phone_number/: solve.py
0018_4sum/: solve.py
0019_remove_nth_node_from_end_of_list/: solve.py
0020_valid_parentheses/: solve.py
0021_merge_k_sorted_lists/: solve.py
0022_generate_parentheses/: solve.py
0023_merge_k_sorted_list/: solve.py
0024_swap_nodes_in_pairs/: solve.py
0025_reverse_nodes_in_k-group/: solve.py
0026_remove_duplicates_from_sorted_array/: solve.py
0029_divide_two_integers/: solve.py
0038_count_and_say/: solve.py
0049_group_anagrams/: solve.py
0532_k-diff_pairs_in_an_array/: solve.py
0819_most_common_word/: solve.py
0820_short_encoding_of_words/: solve.py
0877_stone_game/: solve.py
1704_determine_if_string_halves_are_alike/: solve.py
1942_the_number_of_the_smallest_occupied_chair/: solve.py
2146_k_highest_ranked_items_within_a_price_range/: solve.py
(+1 files in other folders)
